CSS changes to fix images on small screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,6 +370,7 @@ option::selection {
 
 .container {
 margin-bottom: 15px;
+text-align: center;
 }
 
 
@@ -388,7 +389,7 @@ margin-bottom: 15px;
 .front {
     width: 150px;
     height: 150px;
-    background: url(../images/bmw_logo.jpg) no-repeat center center /contain;
+    background: url(../images/front.jpg) no-repeat center center /contain;
 }
 
 .back {
@@ -843,6 +844,17 @@ section {
         font-size: xx-small;
         width: 100%;
       }
-  
+
+
+    .col {
+        width: 83px;
+        height: 83px;
+    }
+    
+    .front {
+        width: 100%;
+        height: 100%;
+        background: url(../images/front.jpg) no-repeat center center /contain;
+    }
   
    }
